# miVideoEditor

./: .gitignore  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  SPECS.md  pyproject.toml
mivideoeditor/: __init__.py
mivideoeditor/core/: DESIGN.md  __init__.py  constants.py  models.py
mivideoeditor/detection/: DESIGN.md  README.md  __init__.py  base.py  cnn.py  constants.py  ensemble.py  ml.py  motion_tracker.py  template.py  training.py
mivideoeditor/ml/: __init__.py  base.py  coco_converter.py  config.py  data.py  models.py  registry.py
mivideoeditor/ml/backends/: __init__.py  base.py  factory.py  registry.py
mivideoeditor/ml/engine/: evaluator.py  predictor.py  trainer.py
mivideoeditor/ml/metrics/: coco_eval.py
mivideoeditor/ml/utils/: device.py
mivideoeditor/processing/: DESIGN.md  __init__.py
mivideoeditor/storage/: DESIGN.md  __init__.py  annotation_service.py  cache_manager.py  file_manager.py  models.py  service.py  timeline_service.py
mivideoeditor/utils/: DESIGN.md  __init__.py  image.py  system.py  time.py  validation.py  video.py
mivideoeditor/web/: DESIGN.md  __init__.py  app.py
mivideoeditor/web/routers/: __init__.py  annotations.py
mivideoeditor/web/static/: annotation-app.css  annotation-app.html  annotation-app.js
scripts/: run_annotation_app.py
tests/: GUIDELINES.md  __init__.py  test_integration.py
tests/core/: test_constants.py  test_models.py
tests/utils/: test_image.py  test_system.py  test_time.py  test_validation.py  test_video.py
