[project]
name = "mivideoeditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff.lint]

select = [
    "ALL"
]

ignore = [
    # Conflicts with formatter, see:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", "COM819",
    "D203", "D206", "D213", "D300",
    "E111", "E114", "E117",
    "W191",
    "Q000", "Q001", "Q002", "Q003",

    # to-dos
    "FIX002",
    "TD001", "TD002", "TD003",

    # constructors
    "ANN003", "ANN204", "D107",

    # pydantic runtime types
    "UP007",

    # unittest
    "PT009", "PT027"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mivideoeditor"]

[tool.hatch.build]
include = [
    "mivideoeditor/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "mivideoeditor/**/*.py",
]
