[project]
name = "mivideoeditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "pydantic>=2.11.7",
]

[tool.ruff.lint]

select = [
    "ALL"
]

ignore = [
    # Conflicts with formatter, see:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", "COM819",
    "D203", "D206", "D213", "D300",
    "E111", "E114", "E117",
    "W191",
    "Q000", "Q001", "Q002", "Q003",

    # to-dos
    "FIX002",
    "TD001", "TD002", "TD003",

    # constructors
    "ANN003", "ANN204", "D107",

    # pydantic runtime types
    "UP007",

    # unittest
    "PT009", "PT027",
    
    # Allow more than 5 arguments in class methods
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # Allow asserts in tests
    "PLR2004",  # Allow magic values in tests
    "T201",     # Allow print statements in tests
    "ANN201",   # Missing return type annotations in test methods are ok
]

[tool.ruff.lint.pylint]
max-args = 7

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mivideoeditor"]

[tool.hatch.build]
include = [
    "mivideoeditor/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "mivideoeditor/**/*.py",
]
